Closed Bug 124563 Opened 24 years ago Closed 23 years ago

Acrobat PDF plug-in fails to completely draw its' chrome on load in Mozilla

Categories

(Core Graveyard :: Plug-ins, defect, P2)

PowerPC
Mac System 9.x
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: bugmail, Assigned: peterl-bugs)

References

()

Details

(Whiteboard: [ADT2])

Attachments

(2 files, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Macintosh; U; PPC; en-US; rv:0.9.8) Gecko/20020204 BuildID: 2002020405 The Acrobat PDF plug-in fails to completely draw its' own chrome when invoked in Mozilla, leaving parts of the previous document visible. Reproducible: Always Steps to Reproduce: 1. Access a normal HTML document such as [http://www.mozilla.org] 2. Access a PDF document such as the example URL. Actual Results: The Acrobat Plug-in fails to completely draw its' chrome, leaving parts of the previous document visible. Expected Results: The plug-in should have completely drawn its' chrome, overwriting the old document. If the Mozilla window is hidden, then redisplayed, the plug-in chrome is fully displayed. The plug-in works as expected in Mac IE 5.1.3 (4012).
Observe the incompletely rendered plug-in chrome in this screen shot. 1. Missing "Bookmarks" and "Thumbnails" tabs along the left side 2. Missing plug-in sidebar widget at bottom-left 3. Missing zoom percentage drop-down menu widget in toolbar 4. Incompletely drawn toolbar background at right, leaving previous black
Acrobat plug-in version used is that included with Acrobat Reader 5.0.5, a Carbon application.
WFM [Mozilla 2002020803, Windows 2000, Acrobat reader 5.0.5] it is a slow document to use tho, maybe its using up too much of your video RAM (how much of that do you have?)
I had seen this...does not happen when I have just ns6.x open. But with other apps running...this is seen. Part of the acrobat UI does not paint unless forced to redraw...true
Status: UNCONFIRMED → NEW
Ever confirmed: true
-->peterl Possibly related to bug 120168
Assignee: av → peterl
Depends on: 120168
Keywords: mozilla1.0
Priority: -- → P2
Target Milestone: --- → mozilla1.0
Moving Netscape owned 0.9.9 and 1.0 bugs that don't have an nsbeta1, nsbeta1+, topembed, topembed+, Mozilla0.9.9+ or Mozilla1.0+ keyword. Please send any questions or feedback about this to adt@netscape.com. You can search for "Moving bugs not scheduled for a project" to quickly delete this bugmail.
Target Milestone: mozilla1.0 → mozilla1.2
nominating nsbeta1, thisis pretty bad
Keywords: nsbeta1
Attached patch patch to invalidate (obsolete) — Splinter Review
Yeah, this is pretty bad. Here's a patch that seems to make it better.
Status: NEW → ASSIGNED
No longer depends on: 120168
Keywords: patch
Is this patch going to cause an additional 'flash' every time any full page plugin is loaded?
have not yet tested on Windows or Linux. it's possible it needs some #ifdefs
Mac is the only platform showing this problem because it does not have child windows so this fix is Mac-only. This fix is not appropriate for other platforms and may even cause a flicker.
Attachment #75402 - Attachment is obsolete: true
Comment on attachment 75647 [details] [diff] [review] updated patch to exclude other platforms except for Mac r=av
Keywords: nsbeta1nsbeta1+
Target Milestone: mozilla1.2alpha → mozilla1.0
adding adt2 to status whiteboard as per discussion with beppe. this only happens to mac users, although a patch is available already.
Whiteboard: [ADT2]
Comment on attachment 75647 [details] [diff] [review] updated patch to exclude other platforms except for Mac sr=beard
Attachment #75647 - Flags: superreview+
Comment on attachment 75647 [details] [diff] [review] updated patch to exclude other platforms except for Mac from comments
Attachment #75647 - Flags: review+
Comment on attachment 75647 [details] [diff] [review] updated patch to exclude other platforms except for Mac a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #75647 - Flags: approval+
patch on trunk, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
I confirm this is resolved using Mac/2002032808.
Thanks a lot, Greg! VERIFIED.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: