Fixing redraw problem with full page plugins like Acrobat on Mac, bug 124563 r=av, sr=beard, a=asa